Resolvendo problemas com .gitignore para a pasta .vscode e a pasta resources com as configurações do banco de dados

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,11 @@ target/
 .vscode/
 
 ## Resources DB ##
-resources/
+todoList/resources/
+
+ 
+
+# Outras coisas que você queira ignorar
+todoList/target/
+logs/
+*.log
